--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="tmp_title">Yangon</string>
     <string name="tmp_body">Yangon is a big and yet not modernized city, with Victorian buildings, tree-lined avenues, lakes and parks and a bustling city centre of friendly vendors, colourful stalls and people going about in their daily chores dressed traditionally in their Longyi and flip-flap sandals. The Bogyoke Aung San market (also called Scott’s Market) is a must for every visitor and so is the magnificent Shwedagon Pagoda – the prominent landmark of Myanmar. The first fundament of the Shwedagon is believed to have been built more than 2000 years ago, and the pagoda is revered by Buddhist and non-Buddhists alike. Yangon is the gateway to Myanmar and has direct air links with Bangkok, Singapore, Kuala Lumpur, Tokyo, Seoul, Doha, Beijing, Hanoi, Ho Chi Minh City, Chiang Mai, Hong Kong, Taipei, Guangzhou, Kunming, Nanning, Gaya and Dhaka.</string>
 
+    <string name="stock_photo_shared_transition">event_stock_photo_shared_transition</string>
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
